--- a/src/sections/filter.scss
+++ b/src/sections/filter.scss
@@ -22,7 +22,7 @@
         align-items: center;
         padding-bottom: .6rem;
         border-bottom: 1px solid #eee;
-        margin-bottom: 0.8rem;
+        margin: 0.8rem 0.8rem;
     }
 
 
@@ -51,8 +51,8 @@
 
     &__close {
         position: absolute;
-        top: 0.1rem;
-        right: 0.2rem;
+        top: 0.8rem;
+        right: 0.8rem;
         font-size: 1.6rem;
         padding: .3rem;
         border: 0;
@@ -76,6 +76,10 @@
         font-size: 1rem;
         margin-bottom: 0.8rem;
     }
+}
+
+.filter:last-child {
+    margin-bottom: 0;
 }
 
 .type {
@@ -168,7 +172,7 @@
 
     input {
         width: 18rem;
-        padding: 1.2rem;
+        padding: 1rem;
         font-size: 1rem;
         border: 1px solid #ccc;
         border-radius: 5px;
